--- a/djangorooms/main/templates/main/room.html
+++ b/djangorooms/main/templates/main/room.html
@@ -2,11 +2,12 @@
 
 {% block content %}
 
-<h2>
+<h3>
     {{room.id}}--{{room.name}}--{{room.description}}
-    {% for message in messages %}
-    {{message.body}}
-    {% endfor %}
-</h2>
+</h3>
+{% for message in messages %}
+<p>{{message.body}}</p>
+{% endfor %}
+<hr>
 
 {% endblock %}
