--- a/djangorooms/main/templates/main/room.html
+++ b/djangorooms/main/templates/main/room.html
@@ -7,6 +7,7 @@
 {% for message in messages %}
 <p><b>{{message.user}}</b>: {{message.body}}</p>
 {% endfor %}
+<button type="submit" value="delete">delete room</button>
 <hr>
 
 {% endblock %}
