--- a/djangorooms/main/templates/main/home.html
+++ b/djangorooms/main/templates/main/home.html
@@ -4,10 +4,13 @@
 
 <h2>home template</h2>
 
+<a href="{% url 'create-room' %}">create room</a>
+<hr>
+
 {% for room in rooms %}
 <div>
-    <a href="{% url 'create-room' %}">create room</a>
-
+    <a href="{% url 'update-room' room.id %}">edit</a>
+    <a href="{% url 'delete-room' room.id %}">delete</a>
     <span style="color:firebrick">@{{room.host.username}}</span>
     <h2>{{rooom.id}}  <a href="{% url 'room' room.pk %}">{{room.name}}</a></h2>
     <small>{{room.topic.name}}</small>
