added decorators to views

--- a/djangorooms/main/templates/main/home.html
+++ b/djangorooms/main/templates/main/home.html
@@ -30,8 +30,10 @@
         <h3><a href="{% url 'create-room' %}">create room</a></h3>
         <hr>
     {% for room in rooms %}
+        {% if request.user == room.host %}
         <a href="{% url 'update-room' room.id %}">edit</a>
         <a href="{% url 'delete-room' room.id %}">delete</a>
+        {% endif %}
         <span style="color:firebrick">@{{room.host.username}}</span>
         <h2>{{rooom.id}}  <a href="{% url 'room' room.pk %}">{{room.name}}</a></h2>
         <small>{{room.topic.name}}</small>
