--- a/djangorooms/main/templates/main/login_register.html
+++ b/djangorooms/main/templates/main/login_register.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 
+{% if page == 'login' %}
 <div>
     <form action="" method="POST">
         {% csrf_token %}
@@ -11,6 +12,20 @@
         <input type="password" name="password" placeholder="enter password">
         <input type="submit" value="login">
     </form>
+    <p>havent signed up yet</p>
+    <a href="{% url 'register' %}">sign up</a>
 </div>
+
+{% else %}
+<div>
+    <form action="" method="POST">
+        {% csrf_token %}
+        {{form.as_p}}
+        <input type="submit" value="register">
+    </form>
+    <p>already signed up</p>
+    <a href="{% url 'login' %}">login</a>
+</div>
+{% endif %}
 
 {% endblock content %}
