--- a/djangorooms/main/templates/main/delete.html
+++ b/djangorooms/main/templates/main/delete.html
@@ -2,11 +2,20 @@
 
 {% block content %}
 
-<form method="POST" action="">
-    {% csrf_token %}
-    <p>are you sure to delete {{obj}}</p>
-    <a href="{{request.META.HTTP_REFERER}}">go back</a>
-    <input type="submit" value="confirm">
-</form>
+<div class="card text-center">
+  <div class="card-header">
+    Deletion Confirmation
+  </div>
+  <div class="card-body">
+    <p class="card-text">Silmek istediğinize emin misiniz: <strong>"{{obj}}"</strong>?</p>
+  </div>
+  <div class="card-footer">
+    <form method="POST" action="">
+      {% csrf_token %}
+      <a href="/" type="button" class="btn btn-secondary">Geri Dön</a>
+      <button type="submit" class="btn btn-primary" name="deleteMessage">Onayla</button>
+    </form>
+  </div>
+</div>
 
 {% endblock content %}
