--- a/djangorooms/main/templates/main/home.html
+++ b/djangorooms/main/templates/main/home.html
@@ -6,40 +6,64 @@
 
 <link rel="stylesheet" type="text/css" href="{% static 'main/style.css' %}">
 
-<div class="home-container">
-    <div>
-        <h3>browse topics</h3>
+<div class="home-container py-5 bg-secondary">
+    <ul class="list-group pt-1 ps-3">
+        <a href="/" type="btn" class="btn btn-primary btn-block btn-lg">
+            Aktif Konular
+        </a>
         <hr>
-        <div>
-            <h4><a href="{% url 'home' %}">all</a></h4>
-        </div>
+        <li class="list-group-item list-group-item-action bg-primary" style="border: 0px; border-radius: 5px; margin-bottom: 1%;">
+            <a href="{% url 'home' %}" style="text-decoration: none;">
+                <h4 class="text-light">
+                    Tümü
+                    <span class="badge bg-light text-primary rounded-pill" style="float: right">{{room_count}}</span>
+                </h4>
+            </a>
+        </li>
         {% for topic in topics %}
-        <div>
-            <h4><a href="{% url 'home' %}?q={{topic.name}}">{{topic.name}}</a></h4>
-        </div>
+        {% if topic.room_set.all.count != 0 %}
+        <li class="list-group-item" style="background-color: whitesmoke; border: 0px; border-radius: 5px; margin-bottom: 1%;">
+            <a href="{% url 'home' %}?q={{topic.name}}" style="text-decoration: none;">
+                <h4>
+                    {{topic.name}}
+                    <span class="badge bg-primary rounded-pill" style="float: right">{{topic.room_set.all.count}}</span>
+                </h4>
+            </a>
+        </li>
+        {% endif %}
         {% endfor %}
-    </div>
-    <div>
-        {% if room_count == 0 %}
-        <h5>no rooms available</h5>
-        {% elif room_count == 1 %}
-        <h5>{{room_count}} room available</h5>
-        {% else %}
-        <h5>{{room_count}} rooms available</h5>
-        {% endif %}
-        <h3><a href="{% url 'create-room' %}">create room</a></h3>
+    </ul>
+    <ul class="list-group ms-4">
+        <div class="row">
+            <div class="col-md pt-1">
+                <a href="{% url 'create-room' %}">
+                    <button type="submit" class="btn btn-primary btn-block btn-lg me-5" style="width: 175px;">
+                        Oda Oluştur
+                    </button>
+                </a>
+            </div>
+            <div class="col-md pt-1">
+                <button type="button" class="btn btn-block btn-lg text-light" style="background-color:limegreen; opacity: 100%; border: 0px; width: 175px;" disabled>
+                    {{room_count}} oda mevcut.
+                </button>
+            </div>
+        </div>
         <hr>
-    {% for room in rooms %}
-        {% if request.user == room.host %}
-        <a href="{% url 'update-room' room.id %}">edit</a>
-        <a href="{% url 'delete-room' room.id %}">delete</a>
-        {% endif %}
-        <span style="color:firebrick">@{{room.host.username}}</span>
-        <h2>{{rooom.id}}  <a href="{% url 'room' room.pk %}">{{room.name}}</a></h2>
-        <small>{{room.topic.name}}</small>
-        <hr>
-    {% endfor %}
-    </div>
+        {% for room in rooms %}
+        <li class="list-group-item" style="border: 3px; border-radius: 5px; margin-bottom: 1%; max-width: 85%; background-color: whitesmoke;">
+            {% if request.user == room.host %}
+            <a href="{% url 'update-room' room.id %}"><button type="submit" class="btn btn-warning mb-3 ">Odayı Düzenle</button></a>
+            <a href="{% url 'delete-room' room.id %}"><button type="submit" class="btn btn-danger mb-3" style="min-width: 8%;">Odayı Sil</button></a>
+            {% endif %}
+            <i class="lead">@{{room.host.username}}</i>
+            <a href="{% url 'room' room.pk %}" style="text-decoration: none;">
+                <h2 class="pb-3 text-primary">{{room.name}}</h2>
+            </a>
+            <small><strong>Konu: </strong><a href="{% url 'home' %}?q={{room.topic.name}}">{{room.topic.name}}</a></small>
+            <span style="float: right;"><small><strong>Oda ID: </strong>{{room.id}}</small></span>
+        </li>
+        {% endfor %}
+    </ul>
 </div>
 
 {% endblock %}
