--- a/djangorooms/main/templates/main/login_register.html
+++ b/djangorooms/main/templates/main/login_register.html
@@ -3,28 +3,71 @@
 {% block content %}
 
 {% if page == 'login' %}
-<div>
-    <form action="" method="POST">
-        {% csrf_token %}
-        <label>username:</label>
-        <input type="text" name="username" placeholder="enter username">
-        <label>password:</label>
-        <input type="password" name="password" placeholder="enter password">
-        <input type="submit" value="login">
-    </form>
-    <p>havent signed up yet</p>
-    <a href="{% url 'register' %}">sign up</a>
+
+{% if messages %}
+<div class="alert alert-dismissible bg-danger text-center text-light mx-auto" style="max-width: 500px; margin-top: 2%;">
+  <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+  <p><strong>{% include 'main/error.html' %}</strong></p>
+</div>
+{% endif %}
+<div class="card text-center mx-auto" style="max-width: 500px; margin-top: 2%;">
+    <div class="card-header bg-secondary text-light">
+      Login
+    </div>
+    <div class="card-body border-secondary" style="border: 5px solid;">
+        <form action="" method="POST">
+            {% csrf_token %}
+            <label class="mt-3">Kullanıcı Adı: </label>
+            <input type="text" name="username" placeholder="Kullanıcı Adı">
+            <br>
+            <label class="mt-3">Şifre: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
+            <input type="password" name="password" placeholder="Şifre">
+            <br>
+            <a href="/" class="btn btn-secondary mt-3">Geri Dön</a>
+            <button type="submit" class="btn btn-primary mt-3">Giriş Yap</button>
+        </form>
+    </div>
+    <div class="card-footer text-center pt-2 bg-secondary text-light">
+      <p>Hesabınız yok mu?</p>
+      <form action="{% url 'register' %}">
+        <button type="submit" class="btn btn-primary mb-2">Kayıt Ol</button>
+      </form>
+  </div>
 </div>
 
 {% else %}
-<div>
-    <form action="" method="POST">
+{% if messages %}
+<div class="alert alert-dismissible bg-danger text-center text-light   mx-auto" style="max-width: 500px; margin-top: 2%;">
+  <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+  <p><strong>{% include 'main/error.html' %}</strong></p>
+</div>
+{% endif %}
+<div class="card text-center mx-auto" style="max-width: 500px; margin-top: 2%;">
+  <div class="card-header bg-secondary text-light">
+    Kayıt Ol
+  </div>
+  <div class="card-body border-secondary" style="border: 5px solid;">
+    <form method="POST">
         {% csrf_token %}
-        {{form.as_p}}
-        <input type="submit" value="register">
+        <label class="mt-3">Kullanıcı Adı: </label>
+        {{form.username}}
+        <br>
+        <label class="mt-3" style="padding-right: 12%;">Şifre: </label>
+        {{form.password1}}
+        <br>
+        <label class="mt-3">Şifre (tekrar): </label>
+        {{form.password2}}
     </form>
-    <p>already signed up</p>
-    <a href="{% url 'login' %}">login</a>
+    <form method="POST" action="">
+      {% csrf_token %}
+      <a href="/" class="btn btn-secondary mt-3">Geri Dön</a>
+      <button type="submit" class="btn btn-primary mt-3">Kayıt Ol</button>
+    </form>
+  </div>
+  <div class="card-footer text-center pt-2 bg-secondary text-light">
+    <p>Hesabınız var mı?</p>
+    <a href="{% url 'login' %}" class="btn btn-primary mb-2" >Giriş Yap</a>
+  </div>
 </div>
 {% endif %}
 
