--- a/djangorooms/main/templates/main/room.html
+++ b/djangorooms/main/templates/main/room.html
@@ -2,47 +2,54 @@
 
 {% block content %}
 
-<style>
-    .room-container {
-        display: grid;
-        grid-template-columns: 3fr 1fr;
-    }
-</style>
+<div class="room-container bg-secondary pt-5 pb-1">
+    <div>
+        <ul class="list-group text-light text-center">
+            <h2>{{room.name}}</h2>
+            {% if room.description != None %}
+            <h4 class="lead pt-3"><strong>Açıklama: </strong> {{room.description}}</h4>
+            {% endif %}
+            {% if request.user == room.host %}
+            <div>
+                <a href="{% url 'update-room' room.id %}"><button type="submit" class="btn btn-warning mt-3">Odayı Düzenle</button></a>
+                <a href="{% url 'delete-room' room.id %}"><button type="submit" class="btn btn-danger mt-3" style="min-width: 8%;">Odayı Sil</button></a>
+            </div>
+            {% endif %}
+            <form method="POST" class="mt-4">
+                {% csrf_token %}
+                <input type="text" name="body" placeholder="Mesajınızı Yazın" style="border: 0px; border-radius: 5px; height: 35px; min-width: 250px; text-align: center;">
+                <button class="btn btn-primary mb-2" type="submit"><bi class="i bi-arrow-return-right"></bi></button>
+            </form>
+        </ul>
+    </div>
+</div>
+<div>
+
+</div>
 
 <div class="room-container">
     <div>
-        <h3>{{room.name}}</h3>
-        <h4>{{room.description}}</h4>
-        <button type="submit" value="delete">delete room</button>
-        <hr>
         {% if request.user.is_authenticated %}
         <div class="comment-form">
             <h3>conversation</h3>
             <hr>
-            <form action="" method="POST">
-                {% csrf_token %}
-                <input type="text" name="body" placeholder="write your message here">
-                <input type="submit" value="send">
-            </form>
         </div>
+        {% endif %}
         <div class="comment-wrapper">
             {% for roomMessage in roomMessages %}
             <div>
-                <p><strong>@{{roomMessage.user}}</strong> {{roomMessage.created|timesince}} ago</p>
+                {% if request.user == roomMessage.user %}
+                <form action="{% url 'delete-roomMessage' roomMessage.id %}">
+                    <button type="submit" class="btn-primary">Delete Message</button>
+                </form>
+                {% endif %}
+                <p><strong>@{{roomMessage.user}}</strong> {{roomMessage.created|timesince}} önce</p>
                 <h4>{{roomMessage.body}}</h4>
                 <hr>
             </div>
             {% endfor %}
         </div>
     </div>
-    <div>
-        <h3>participants</h3>
-        <hr>
-        {% for participant in participants %}
-        <p><strong>{{participant}}</strong></p>
-        {% endfor %}
-    </div>
 </div>
-{% endif %}
 
 {% endblock %}
