--- a/djangorooms/main/templates/main/login_register.html
+++ b/djangorooms/main/templates/main/login_register.html
@@ -29,9 +29,7 @@
     </div>
     <div class="card-footer text-center pt-2 bg-secondary text-light">
       <p>Hesabınız yok mu?</p>
-      <form action="{% url 'register' %}">
-        <button type="submit" class="btn btn-primary mb-2">Kayıt Ol</button>
-      </form>
+      <a href="{% url 'register' %}" type="btn" class="btn btn-primary mb-2">Kayıt Ol</a>
   </div>
 </div>
 
