--- a/djangorooms/templates/navbar.html
+++ b/djangorooms/templates/navbar.html
@@ -39,7 +39,7 @@
       </form>
       {% else %}
       <form action="{% url 'login' %}" class="py-1">
-        <button type="submit" class="btn btn-secondary">Giriş Yap</button>
+        <a href="{% url 'login' %}" type="btn" class="btn btn-secondary py-1">Giriş Yap</a>
       </form>
       {% endif %}
     </div>
