--- a/djangorooms/main/templates/main/room_form.html
+++ b/djangorooms/main/templates/main/room_form.html
@@ -6,25 +6,34 @@
     <div class="card-header bg-secondary text-light">
       Kayıt Ol
     </div>
+<form  class="form" method="POST">
+  {% csrf_token %}
     <div class="card-body border-secondary" style="border: 5px solid;">
-        <form action="" method="POST">
-            {% csrf_token %}
-            <label class="pt-3 pb-1" style="padding-right: 17%;">Konu: </label>
-            <span style="padding-right: 25%;">{{form.topic}}</span>
-            <br>
-            <label class="pt-3 pb-1" style="padding-right: 18%;">İsim: </label>
-            <span style="padding-right: 1%;">{{form.name}}</span>
-            <br>
-            <label class="pt-3 pb-1" style="padding-right: 55%;">Açıklama: </label>
-            <div>
+            <div class="form-group">
+              <label for="topic">Oda Konusu</label>
+              <input required type="text" class="form-control" name="topic" id="topic" list="topic-list">
+              <datalist id="topic-list">
+                <select class="form-select" id="room_topic">
+                {% for topic in topics %}
+                <option value="{{topic}}">{{topic.name}}</option>
+                {% endfor %}
+                </select>
+              </datalist>
+            </div>
+            <div class="form-group">
+                <label for="room_name">Oda Adı</label>
+                {{form.name}}
+            </div>
+            <div class="form-group">
+                <label for="room_description">Oda Açıklaması</label>
                 {{form.description}}
-            </div> 
+            </div>
     </div>
-    <div class="card-footer text-center pt-2 bg-secondary text-light">
-        <a href="javascript:history.back()" type="button" class="btn btn-dark">Geri Dön</a>
-        <button type="submit" class="btn btn-primary">Kaydet</button>
+    <div class="card-footer text-center py-3 bg-secondary text-light">
+        <a href="/" type="btn" class="btn btn-dark">Geri Dön</a>
+        <button type="submit" class="btn btn-primary">Oda Oluştur</button>
     </div>
-        </form>
+</form>
 </div>
 
 {% endblock %}
