--- a/djangorooms/main/templates/main/login_register.html
+++ b/djangorooms/main/templates/main/login_register.html
@@ -20,7 +20,7 @@
             <label class="mt-3">Kullanıcı Adı: </label>
             <input type="text" name="username" placeholder="Kullanıcı Adı">
             <br>
-            <label class="mt-3">Şifre: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
+            <label class="mt-3">Şifre: </label>
             <input type="password" name="password" placeholder="Şifre">
             <br>
             <a href="/" class="btn btn-secondary mt-3">Geri Dön</a>
