--- a/djangorooms/main/templates/main/login_register.html
+++ b/djangorooms/main/templates/main/login_register.html
@@ -20,7 +20,7 @@
             <label class="mt-3">Kullanıcı Adı: </label>
             <input type="text" name="username" placeholder="Kullanıcı Adı">
             <br>
-            <label class="mt-3">Şifre: </label>
+            <label class="mt-3" style="padding-right: 12%;">Şifre: </label>
             <input type="password" name="password" placeholder="Şifre">
             <br>
             <a href="/" class="btn btn-secondary mt-3">Geri Dön</a>
@@ -49,6 +49,9 @@
         {% csrf_token %}
         <label class="mt-3">Kullanıcı Adı: </label>
         {{form.username}}
+        <br>
+        <label class="mt-3" style="padding-right: 12%;">E-mail: </label>
+        {{form.email}}
         <br>
         <label class="mt-3" style="padding-right: 12%;">Şifre: </label>
         {{form.password1}}
